--- a/index.html
+++ b/index.html
@@ -7,15 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>О нас</h1>
+    <section>
+    <h1>У нас есть все для классного отдыха с друзьями!</h1>
+    <ul> 
+        <li>VR очки</li>
+        <li>Аудио-система 5.1 с отличным звуком</li>
+        <li>Караоке (4 микрофона)</li>
+        <li>Настольные игры</li>
+        <li>Кино сервисы Netflix, IVI, MegoGo, Кинопоиск, Okko</li>
+        <li>PlayStation 5</li>
+    </ul>
+</section>
+<section>
+    <h2>Наши залы</h2>
+    <ol>
+        <li>80's vibes</li>
+        <li>Star wars</li>
+        <li>Wild west</li>
+        <li>Neon style</li>
+    </ol>
+</section>
+<section>
+    <h2>О нас</h2>
     <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
     </p>
     <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.
     </p>
         
-    <blockquote><b>GAME OVER</b>- это место незабываемых впечатлений <br>
-        <br>
-   <cite>Аркадий Абакшин, создатель игровой территории GAME OVER</cite>
+    <blockquote><p><q><b>GAME OVER</b>- это место незабываемых впечатлений </q></p>
+        
+   <p><cite>Аркадий Абакшин, создатель игровой территории GAME OVER</cite></p>
 </blockquote>
+</section>
 </body>
 </html>
