--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <h1>Меню</h1>
+        <ul>
+            <li><a href="#halls">Залы</a></li>
+            <li><a href="#about">О нас</a></li>
+            <li><a href="index_1.html" target="_blank">Бронь</a></li>
+            <li><a href="index_2.html" target="_blank">Отзывы</a></li>
+            <li><a href="#contacts">Контакты</a></li>
+        </ul>
+    </nav>
     <section>
-    <h1>У нас есть все для классного отдыха с друзьями!</h1>
+    <h2>У нас есть все для классного отдыха с друзьями!</h2>
     <ul> 
         <li>VR очки</li>
         <li>Аудио-система 5.1 с отличным звуком</li>
@@ -19,16 +29,16 @@
     </ul>
 </section>
 <section>
-    <h2>Наши залы</h2>
+    <h3 id="halls">Наши залы</h3>
     <ol>
-        <li>80's vibes</li>
-        <li>Star wars</li>
-        <li>Wild west</li>
-        <li>Neon style</li>
+        <li><a href="/halls/80_vibes.html">80's vibes</a></li>
+        <li> <a href="/halls/star_wars.html">Star wars</a></li>
+        <li><a href="/halls/wild_west.html">Wild west </a></li>
+        <li><a href="/halls/neon_style.html">Neon style</a></li>
     </ol>
 </section>
 <section>
-    <h2>О нас</h2>
+    <h3 id="about">О нас</h3>
     <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
     </p>
     <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.
@@ -39,5 +49,18 @@
    <p><cite>Аркадий Абакшин, создатель игровой территории GAME OVER</cite></p>
 </blockquote>
 </section>
+
+<footer>
+    <h3 id="contacts">Контакты</h3>
+    <p>г. Москва ул.Аквамарина, 16</p>
+    <p><a href="tel:89509302893">8(950)930-28-93</a>
+    </p>
+    <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
+    <ul>
+        <li><a href="http://vk.com">Vkontakte</a></li>
+        <li><a href="http://telegram.org​">Telegram</a></li>
+    </ul>
+
+</footer>
 </body>
 </html>
