--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <nav>
-        <h1>Меню</h1>
+        <b>Меню </b>
         <ul>
             <li><a href="#halls">Залы</a></li>
             <li><a href="#about">О нас</a></li>
-            <li><a href="index_1.html" target="_blank">Бронь</a></li>
-            <li><a href="index_2.html" target="_blank">Отзывы</a></li>
+            <li><a href="#">Бронь</a></li>
+            <li><a href="#">Отзывы</a></li>
             <li><a href="#contacts">Контакты</a></li>
         </ul>
     </nav>
+</header>
+<main>
     <section>
     <h2>У нас есть все для классного отдыха с друзьями!</h2>
     <ul> 
@@ -31,10 +34,10 @@
 <section>
     <h3 id="halls">Наши залы</h3>
     <ol>
-        <li><a href="/halls/80_vibes.html">80's vibes</a></li>
-        <li> <a href="/halls/star_wars.html">Star wars</a></li>
-        <li><a href="/halls/wild_west.html">Wild west </a></li>
-        <li><a href="/halls/neon_style.html">Neon style</a></li>
+        <li><a href="/halls/80-vibes.html">80's vibes</a></li>
+        <li> <a href="/halls/star-wars.html">Star wars</a></li>
+        <li><a href="/halls/wild-west.html">Wild west </a></li>
+        <li><a href="/halls/neon-style.html">Neon style</a></li>
     </ol>
 </section>
 <section>
@@ -49,18 +52,22 @@
    <p><cite>Аркадий Абакшин, создатель игровой территории GAME OVER</cite></p>
 </blockquote>
 </section>
+</main>
 
 <footer>
     <h3 id="contacts">Контакты</h3>
+    <adress>
     <p>г. Москва ул.Аквамарина, 16</p>
     <p><a href="tel:89509302893">8(950)930-28-93</a>
     </p>
     <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
+</adress>
+<nav>
     <ul>
         <li><a href="http://vk.com">Vkontakte</a></li>
         <li><a href="http://telegram.org​">Telegram</a></li>
     </ul>
-
+</nav>
 </footer>
 </body>
 </html>
