--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="/assets/img/icon.svg">
+    <link rel="icon" type="image/png" href="/assets/img/icon.png">
     <title>Document</title>
 </head>
 <body>
     <header>
+        <img src="/assets/img/logo.png" alt="logo">
     <nav>
         <b>Меню </b>
         <ul>
@@ -21,18 +24,27 @@
 </header>
 <main>
     <section>
-    <h2>У нас есть все для классного отдыха с друзьями!</h2>
-    <ul> 
-        <li>VR очки</li>
-        <li>Аудио-система 5.1 с отличным звуком</li>
+    <h1>У нас есть все для классного отдыха с друзьями!</h1>
+    <ul>
+
+        <li><figure>
+            <img src="/assets/img/vr.jpg" alt="vr-glasses">
+            <figcaption>VR очки</figcaption>
+        </figure>
+            </li>
+            <li><figure>
+                <img src="/assets/img/audio.jpg" alt="audio-system">
+                <figcaption>Аудио-система 5.1 с отличным звуком</figcaption>
+            </figure>
+                </li>
         <li>Караоке (4 микрофона)</li>
         <li>Настольные игры</li>
         <li>Кино сервисы Netflix, IVI, MegoGo, Кинопоиск, Okko</li>
         <li>PlayStation 5</li>
     </ul>
 </section>
-<section>
-    <h3 id="halls">Наши залы</h3>
+<section id="halls">
+    <h2>Наши залы</h2>
     <ol>
         <li><a href="/halls/80-vibes.html">80's vibes</a></li>
         <li> <a href="/halls/star-wars.html">Star wars</a></li>
@@ -40,8 +52,8 @@
         <li><a href="/halls/neon-style.html">Neon style</a></li>
     </ol>
 </section>
-<section>
-    <h3 id="about">О нас</h3>
+<section id="about">
+    <h2>О нас</h2>
     <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
     </p>
     <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.
@@ -54,8 +66,8 @@
 </section>
 </main>
 
-<footer>
-    <h3 id="contacts">Контакты</h3>
+<footer id="contacts">
+    <h2>Контакты</h2>
     <adress>
     <p>г. Москва ул.Аквамарина, 16</p>
     <p><a href="tel:89509302893">8(950)930-28-93</a>
