--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/assets/img/icon.svg">
-    <link rel="icon" type="image/png" href="/assets/img/icon.png">
+    <link rel="icon" type="image/svg+xml" href="assets/img/icon.svg">
+    <link rel="icon" type="image/png" href="assets/img/icon.png">
     <title>Game Over</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
     <header>
-        <img src="/assets/img/logo.svg" alt="logo">
+        <img src="assets/img/logo.svg" alt="logo">
         <nav>
             <b>Меню </b>
             <ul>
@@ -33,42 +33,42 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="/assets/img/vr.jpg" alt="Парень в очках виртуальной реальности">
+                        <img src="assets/img/vr.jpg" alt="Парень в очках виртуальной реальности">
                         <figcaption>VR очки</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="/assets/img/audio.jpg" alt="Рука на аудиосистеме">
+                        <img src="assets/img/audio.jpg" alt="Рука на аудиосистеме">
                         <figcaption>Аудио-система 5.1 с отличным звуком</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="/assets/img/micro.jpg" alt="Девушка поет с микрофоном">
+                        <img src="assets/img/micro.jpg" alt="Девушка поет с микрофоном">
                         <figcaption>Караоке (4 микрофона)</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="/assets/img/game.jpg" alt="Люди играют в настольную игру">
+                        <img src="assets/img/game.jpg" alt="Люди играют в настольную игру">
                         <figcaption>Настольные игры</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="/assets/img/netflix.jpg" alt="Монитор с логотипом Netflix">
+                        <img src="assets/img/netflix.jpg" alt="Монитор с логотипом Netflix">
                         <figcaption>Кино сервисы Netflix, IVI, MegoGo, Кинопоиск, Okko</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="/assets/img/sony.jpg" alt="Монитор с логотипом Warzone">
+                        <img src="assets/img/sony.jpg" alt="Монитор с логотипом Warzone">
                         <figcaption>PlayStation 5</figcaption>
                     </figure>
                 </li>
@@ -77,10 +77,10 @@
         <section id="halls">
             <h2>Наши залы</h2>
             <ol>
-                <li><a href="/halls/80-vibes.html">80's vibes</a></li>
-                <li> <a href="/halls/star-wars.html">Star wars</a></li>
-                <li><a href="/halls/wild-west.html">Wild west </a></li>
-                <li><a href="/halls/neon-style.html">Neon style</a></li>
+                <li><a href="halls/80-vibes.html">80's vibes</a></li>
+                <li> <a href="halls/star-wars.html">Star wars</a></li>
+                <li><a href="halls/wild-west.html">Wild west </a></li>
+                <li><a href="halls/neon-style.html">Neon style</a></li>
             </ol>
         </section>
 
