--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
             <section>
                 <h2>Частые вопросы</h2>
                     <ul class="questions-list">
-                        <li>Можно ли забронировать комнату онлайн?</li>
-                        <li>Могут ли мне вернуть деньги за бронь?</li>
-                        <li>Какая комната самая популярная?</li>
-                        <li>Как получить VIP карту?</li>
-                        <li>Какая комната самая популярная?</li>
+                        <li class="questions-item">Можно ли забронировать комнату онлайн?</li>
+                        <li class="questions-item">Могут ли мне вернуть деньги за бронь?</li>
+                        <li class="questions-item">Какая комната самая популярная?</li>
+                        <li class="questions-item">Как получить VIP карту?</li>
+                        <li class="questions-item">Какая комната самая популярная?</li>
                     </ul>
             </section>
         </main>
