--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </section>
 
             <section class="section">
-                <h2 class="subtitle">Частые вопросы</h2>
+                <h2 class="subtitle subtitle-questions">Частые вопросы</h2>
                 <ul class="questions-list">
                     <li class="questions-item">Можно ли забронировать комнату онлайн?</li>
                     <li class="questions-item">Могут ли мне вернуть деньги за бронь?</li>
@@ -169,6 +169,7 @@
             </section>
         </main>
 
+        <section class="section">
         <footer class="footer">
             <h2 class="subtitle">Контакты</h2>
             <adress class="contacts-info">
@@ -201,6 +202,7 @@
                 </ul>
             </nav>
         </footer>
+    </section>
     </div>
 </body>
 </div>
