--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                         <label for="hall-4">neon style</label>
                     </fieldset>
 
-                    <fieldset class="reserve-form__item">
-                        <legend class="reserve-form__title form-box">Собери набор развлечений</legend>
+                    <fieldset class="reserve-form__item form-box">
+                        <legend class="reserve-form__title ">Собери набор развлечений</legend>
                         <fieldset class="form-box__item">
                             <legend class="form-box__title">Приставка:</legend>
                             <input type="radio" name="game-console" id="PS" value="PS">
@@ -104,16 +104,16 @@
 
                     <fieldset class="reserve-form__item">
                         <legend class="reserve-form__title">Выбери дату и время</legend>
-                        <div class="reserve-form__field field--date-time">
+                        <div class="field field--type--date-time">
                             <input type="text" name="reserve-date" placeholder="Дата" required>
                             <input type="text" name="reserve-time" placeholder="Время" required>
                         </div>
 
-                        <div class="reserve-form__field field--amount-people">
+                        <div class="field field--type--amount-people">
                             <input type="number" name="number" placeholder="Сколько человек" required>
                         </div>
 
-                        <div class="reserve-form__field field--name">
+                        <div class="field field--type--name">
                             <input type="text" name="name" id="name-field" required>
                             <label for="name-field">Имя</label>
 
@@ -121,7 +121,7 @@
                             <label for="surname-field">Фамилия</label>
                         </div>
 
-                        <div class="reserve-form__field field--contact">
+                        <div class="field field--type--contact">
                             <label for="phone-field">Телефон</label>
                             <input type="tel" name="phone" id="phone-field" required>
                             <label for="email-field">E-mail</label>
@@ -151,7 +151,7 @@
                 <blockquote class="blockquote">
                     <p class="text blockquote__text"><q class="quote">GAME OVER &mdash;
 это место незабываемых впечатлений</q></p>
-                    <figure class="blockquote__image-block">
+                    <figure class="blockquote__image-block image-block">
                         <img class="image-block__img" src="img/boss.jpg" alt="мужчина">
                         <figcaption class="text image-block__text">Аркадий Абакшин, создатель игровой территории GAME OVER
                         </figcaption>
